--- a/app.properties
+++ b/app.properties
@@ -1,6 +1,12 @@
-# PostgreSQL
+#PostgreSQL
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.connection.url=jdbc:postgresql
+
+
 hibernate.connection.driver_class=org.postgresql.Driver
 hibernate.connection.username=postgres
 hibernate.connection.password=password
+username=pass
+
+qwrqrqwr=
+
