--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>gson</artifactId>
       <version>2.9.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220320</version>
+    </dependency>
     <!-- JAXB API only -->
     <dependency>
       <groupId>jakarta.xml.bind</groupId>
